--- a/index.html
+++ b/index.html
@@ -8,6 +8,19 @@
   </head>
   <body>
     <h1>Welcome to AI Italian poem Generator</h1>
+
+    <footer>
+      Coded by
+      <a href="https://github.com/dashboard" target="blank">Alex Nedelcut</a>,
+      open-sourced on
+      <a
+        href="https://github.com/alexndl31/italian-poem-generator"
+        target="blank"
+        >GitHub</a
+      >
+      and hosted by
+      <a href="https://ailovesitaly.netlify.app/" target="_blank">Netlify </a>
+    </footer>
     <script src="index.js"></script>
   </body>
 </html>
