removed css style
added basic html structure

--- a/index.html
+++ b/index.html
@@ -4,10 +4,29 @@
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="index.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>AI Italian Poem Generator</title>
   </head>
   <body>
-    <h1>Welcome to AI Italian poem Generator</h1>
+    <header>
+      <h1>Welcome to AI Italian poem Generator</h1>
+    </header>
+    <main>
+      <form>
+        <input
+          type="text"
+          autofocus
+          required
+          autocomplete="off"
+          placeholder="Enter topic for your Italian poem"
+        />
+        <input type="submit" />
+      </form>
+      <div id="poem">
+        Poem goes here
+        <br />
+        roses are red, violets are blue
+      </div>
+    </main>
 
     <footer>
       Coded by
