--- a/index.html
+++ b/index.html
@@ -7,39 +7,42 @@
     <title>AI Italian Poem Generator</title>
   </head>
   <body>
-    <header>
-      <h1>Welcome to AI Italian poem Generator</h1>
-    </header>
-    <main>
-      <form>
-        <input
-          type="text"
-          autofocus
-          required
-          autocomplete="off"
-          placeholder="Enter topic for your Italian poem"
-        />
-        <input type="submit" />
-      </form>
-      <div id="poem">
-        Poem goes here
-        <br />
-        roses are red, violets are blue
-      </div>
-    </main>
+    <div class="container">
+      <header>
+        <h1>Welcome to AI Italian poem Generator</h1>
+      </header>
+      <main>
+        <form>
+          <input
+            type="text"
+            class="instructions"
+            autofocus
+            required
+            autocomplete="off"
+            placeholder="Enter topic for your Italian poem"
+          />
+          <input type="submit" class="submit-button" />
+        </form>
+        <div class="poem">
+          Poem goes here
+          <br />
+          roses are red, violets are blue
+        </div>
+      </main>
 
-    <footer>
-      Coded by
-      <a href="https://github.com/dashboard" target="blank">Alex Nedelcut</a>,
-      open-sourced on
-      <a
-        href="https://github.com/alexndl31/italian-poem-generator"
-        target="blank"
-        >GitHub</a
-      >
-      and hosted by
-      <a href="https://ailovesitaly.netlify.app/" target="_blank">Netlify </a>
-    </footer>
+      <footer>
+        Coded by
+        <a href="https://github.com/dashboard" target="blank">Alex Nedelcut</a>,
+        open-sourced on
+        <a
+          href="https://github.com/alexndl31/italian-poem-generator"
+          target="blank"
+          >GitHub</a
+        >
+        and hosted by
+        <a href="https://ailovesitaly.netlify.app/" target="_blank">Netlify </a>
+      </footer>
+    </div>
     <script src="index.js"></script>
   </body>
 </html>
