--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="index.css" />
     <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios@1.6.7/dist/axios.min.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>AI Italian Poem Generator</title>
   </head>
@@ -17,6 +18,7 @@
           <input
             type="text"
             class="instructions"
+            id="user-instructions"
             autofocus
             required
             autocomplete="off"
